# brot_rust

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/core/: batch.rs  mod.rs  mtwister_rand.rs  point.rs  trace.rs
src/input/: args.rs  mod.rs  search_parameters.rs
src/output/: mod.rs  slate.rs  view.rs
src/point_checker/: classic.rs  mod.rs  threaded.rs  vectorized.rs
src/point_renderer/: binary.rs  buddhabrot.rs  layered.rs  mod.rs
src/points_finder/: mod.rs  random.rs  scan.rs
