[package]
name = "brot_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
byte-slice-cast = "1.2.1"
png = "0.17.5"
fastrand = "1.7.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.5"

#![feature(iter_intersperse)]
